Bug 893434 - OdinMonkey: make accessing non-data properties a link-time validation error (r=bbouvier)

--HG--
extra : rebase_source : 5b827256536c16d9e2da15e9877efcf393e1a9ef