js/src/ion/AsmJSLink.cpp
@@ -36,6 +36,18 @@ LinkFail(JSContext *cx, const char *str)
 }
 
 static bool
+GetDataProperty(JSContext *cx, const Value &objVal, HandlePropertyName field, MutableHandleValue v)
+{
+    if (!objVal.isObject())
+        return LinkFail(cx, "accessing property of non-object");
+    if (!objVal.toObject().isNative())
+        return LinkFail(cx, "accessing property of non-host object");
+    if (!HasDataProperty(cx, &objVal.toObject(), NameToId(field), v.address()))
+        return LinkFail(cx, "object missing data property");
+    return true;
+}
+
+static bool
 ValidateGlobalVariable(JSContext *cx, const AsmJSModule &module, AsmJSModule::Global &global,
                        HandleValue importVal)
 {
@@ -55,7 +67,7 @@ ValidateGlobalVariable(JSContext *cx, const AsmJSModule &module, AsmJSModule::Gl
       case AsmJSModule::Global::InitImport: {
         RootedPropertyName field(cx, global.varImportField());
         RootedValue v(cx);
-        if (!GetProperty(cx, importVal, field, &v))
+        if (!GetDataProperty(cx, importVal, field, &v))
             return false;
 
         switch (global.varImportCoercion()) {
@@ -81,7 +93,7 @@ ValidateFFI(JSContext *cx, AsmJSModule::Global &global, HandleValue importVal,
 {
     RootedPropertyName field(cx, global.ffiField());
     RootedValue v(cx);
-    if (!GetProperty(cx, importVal, field, &v))
+    if (!GetDataProperty(cx, importVal, field, &v))
         return false;
 
     if (!v.isObject() || !v.toObject().is<JSFunction>())
@@ -97,7 +109,7 @@ ValidateArrayView(JSContext *cx, AsmJSModule::Global &global, HandleValue global
 {
     RootedPropertyName field(cx, global.viewName());
     RootedValue v(cx);
-    if (!GetProperty(cx, globalVal, field, &v))
+    if (!GetDataProperty(cx, globalVal, field, &v))
         return false;
 
     if (!IsTypedArrayConstructor(v, global.viewType()))
@@ -110,10 +122,10 @@ static bool
 ValidateMathBuiltin(JSContext *cx, AsmJSModule::Global &global, HandleValue globalVal)
 {
     RootedValue v(cx);
-    if (!GetProperty(cx, globalVal, cx->names().Math, &v))
+    if (!GetDataProperty(cx, globalVal, cx->names().Math, &v))
         return false;
     RootedPropertyName field(cx, global.mathName());
-    if (!GetProperty(cx, v, field, &v))
+    if (!GetDataProperty(cx, v, field, &v))
         return false;
 
     Native native = NULL;
@@ -146,7 +158,7 @@ ValidateGlobalConstant(JSContext *cx, AsmJSModule::Global &global, HandleValue g
 {
     RootedPropertyName field(cx, global.constantName());
     RootedValue v(cx);
-    if (!GetProperty(cx, globalVal, field, &v))
+    if (!GetDataProperty(cx, globalVal, field, &v))
         return false;
 
     if (!v.isNumber())
